# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added quake3-master-getservers, which gets a list of live
  Quake 3 servers from a master server. (It also works for many
  similar games.) [Toni Ruottu]

o Added a Service Tags UDP probe for port 6481/udp. [David]

o [NSE] Added servicetags.nse, which queries the Sun Service Tags
  agent and gets system information. [Matthew Flanagan]

o [NSE] Enhanced firewalk.nse to automatically find the gateways at
  which probes are dropped. [Henri Doreau]

o [NSE] Use the correct script name in the usage example of the
  smtp-enum-users script. Reported by Jamuse, who also contributed
  a patch.
  
o [NSE] db2-das-info - Corrected a bug that caused the script to fail
  when DB2 Discovery mode is disabled on the DAS service on port 523.
  [Tom]
  
o Added checks that the argument to freeaddrinfo is not NULL, avoiding
  a segmentation fault on Android and possibly other platforms.
  Suggested by Vlatko Kosturjak and Alexismm2.

o [Zenmap] Worked around a pycairo bug that prevented saving the
  topology graphic as PNG on Windows: "Error Saving Snapshot:
  Surface.write_to_png takes one argument which must be a filename
  (str), file object, or a file-like object which has a 'write' method
  (like StringIO)". The problem was reported by Alex Kah. [David]

o The -V and --version options now show the platform Nmap was compiled
  on, which features are compiled in, and the version numbers of
  libraries it is linked against. [Ambarisha B., David]

o Fixed some inconsistencies in nmap-os-db reported by Xavier Sudre
  from netVigilance.

o Updated IANA IP address space assignment list for random IP (-iR)
  generation.  This list now contains only various reserved blocks as
  IANA has handed out the final unallocated IPv4 addresses to the
  RIRs. [Kris]

Nmap 5.51 [2011-02-11]

o [Ndiff] Added support for prerule and postrule scripts. [David]

o [NSE] Fixed a bug which caused some NSE scripts to fail due to the